# flecsi

./: .version  CMakeLists.txt  VERSION
config/sphinx/src/: developer-guide.rst  tutorial.rst
devel/: ci  tutorial
devel/spack/: packages.yaml
doc/doxygen/api-rntm/: doxygen.conf.in  mainpage.md
doc/doxygen/api-spec/: doxygen.conf.in  mainpage.md
doc/doxygen/api-user/: doxygen.conf.in
doc/sphinx/src/: api.rst
flecsi/: flog.hh
flecsi/data/: topology.hh
flecsi/data/mpi/: policy.hh
flecsi/exec/: CMakeLists.txt
flecsi/run/test/: flog.cc
flecsi/topo/: CMakeLists.txt
flecsi/topo/narray/: coloring_utils.hh  interface.hh  types.hh
flecsi/topo/narray/test/: narray.cc  narray_tasks.hh
flecsi/topo/ntree/: interface.hh
flecsi/topo/set/: interface.hh  types.hh
flecsi/topo/unstructured/: coloring_utils.hh  interface.hh  types.hh
flecsi/topo/unstructured/test/: closure.cc  fixed.cc  fixed.hh
os/: clearlinux  fedora-33
tools/: configure
tutorial/standalone/attic/app/tasks/: advance_mpi.hh
tutorial/standalone/poisson/app/: CMakeLists.txt  analysis.cc  analysis.hh  finalize.hh  initialize.hh  options.hh  poisson.cc  problem.cc  problem.hh  solve.cc  solve.hh  state.hh
tutorial/standalone/poisson/app/tasks/: init.cc  init.hh  io.cc  io.hh  norm.cc  norm.hh  smooth.cc  smooth.hh
tutorial/standalone/poisson/include/: analysis.hh  options.hh
tutorial/standalone/poisson/include/specialization/: mesh.hh  types.hh
tutorial/standalone/poisson/include/tasks/: norm.hh  smooth.hh
tutorial/standalone/poisson/specialization/: control.hh  mesh.hh
